# market-data-agg

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  POLYMARKET_ARCHITECTURE.md  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 030a22bcd7cb_.py
docs/: CURL_MANUAL_TEST.md  ROUTER_CURL_TESTS.md
src/market_data_agg/: container.py  dependencies.py  deps.py  main.py  utils.py
src/market_data_agg/cli/: __init__.py  test_routers.py
src/market_data_agg/db/: __init__.py  cli.py  models.py  sessions.py
src/market_data_agg/providers/: __init__.py  base.py  coingecko.py  yfinance.py
src/market_data_agg/providers/core/: __init__.py  error_mapper.py  exceptions.py  market_provider_abc.py  protocols.py  stream_helpers.py  utils.py
src/market_data_agg/providers/crypto/: __init__.py  crypto_provider_abc.py
src/market_data_agg/providers/crypto/coingecko/: __init__.py  coin_gecko_provider.py  models.py
src/market_data_agg/providers/polymarket/: __init__.py  cache.py  mapper.py  models.py  provider.py  resolver.py
src/market_data_agg/providers/predictions/: __init__.py  predictions_provider_abc.py
src/market_data_agg/providers/predictions/polymarket/: __init__.py  dto.py  models.py  polymarket_dto.py  polymarket_provider.py
src/market_data_agg/providers/stocks/: __init__.py  stocks_provider_abc.py
src/market_data_agg/providers/stocks/yfinance/: __init__.py  models.py  y_finance_provider.py
src/market_data_agg/routers/: __init__.py  crypto.py  markets.py  polymarket.py  predictions.py  stocks.py
src/market_data_agg/schemas/: __init__.py
src/market_data_agg/services/: __init__.py  crypto.py  market_factory.py  market_service.py  markets.py  markets_service.py  predictions.py  protocols.py  stocks.py
src/market_data_agg/services/utils/: __init__.py  stream_handler.py
