[tool.poetry]
name = "market-data-agg"
version = "0.1.0"
description = ""
authors = ["pabrcno <pabrcn@gmail.com>"]
readme = "README.md"
packages = [{include = "market_data_agg", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
sqlmodel = ">=0.0.32,<0.0.33"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings = ">=2.6.0,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
redis = ">=7.1.0,<8.0.0"
python-jose = ">=3.5.0,<4.0.0"
passlib = ">=1.7.4,<2.0.0"
celery = ">=5.6.2,<6.0.0"
psycopg2-binary = ">=2.9.10,<3.0"
alembic = ">=1.18.3,<2.0.0"
yfinance = ">=0.2.0"
websockets = ">=15.0,<16.0"
pytz = ">=2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"
ruff = "^0.15.0"

[tool.poetry.scripts]
dev = "market_data_agg.main:run_dev"
db-generate = "market_data_agg.db.cli:generate"
db-migrate = "market_data_agg.db.cli:migrate"
start = "market_data_agg.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
init-hook = 'import sys; from pathlib import Path; sys.path.insert(0, str(Path.cwd() / "src"))'
